# LingEcho-App

./: .gitignore  App.tsx  Dockerfile  PROJECT_SCAN_REPORT.md  README.md  README_CN.md  TODO.md  UPGRADE.md  app.json  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  package.json
desktop/: Cargo.toml  Dockerfile  index.html  package.json  vite.config.ts
desktop/public/: manifest.json
desktop/scripts/: setup-tauri.sh
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/api/: assistant.ts  auth.ts  chat.ts  credential.ts  jsTemplate.ts  knowledge.ts  notification.ts  profile.ts  voiceTraining.ts  workflow.ts
desktop/src/components/Animations/: EnhancedPageTransition.tsx  EnhancedParticleEffect.tsx
desktop/src/components/Auth/: AuthModal.tsx  ProtectedRoute.tsx
desktop/src/data/: documentation.json
desktop/src/hooks/: useAI.ts
desktop/src/pages/: CredentialManager.tsx  DesktopPetWindow.tsx  Documentation.tsx  JSTemplateManager.tsx  KnowledgeBase.tsx  NotFound.tsx  NotificationCenter.tsx  Profile.tsx  VoiceAssistant.tsx  VoiceTraining.tsx
desktop/src/services/: aiService.ts  functionToolsService.ts  knowledgeService.ts
desktop/src/stores/: aiStore.ts  authStore.ts  notificationStore.ts  themeStore.ts
desktop/src/styles/: theme.css
desktop/src/types/: ai.ts  functionTools.ts  knowledge.ts  tauri.d.ts
desktop/src/utils/: animationLibrary.ts  avatar.ts  axios.ts  request.ts  tauri.ts  themeAdapter.ts
(+756 files in other folders)
